--- a/roles/galera/templates/galera.cnf.j2
+++ b/roles/galera/templates/galera.cnf.j2
@@ -5,7 +5,7 @@ default-character-set=utf8
 default-character-set=utf8
 
 [mysqld]
-bind-address={{ api_interface_address }}
+bind-address={{ rel_interface_address }}
 port={{ mariadb_port }}
 
 # log-error=/var/log/mariadb.log
@@ -21,14 +21,14 @@ character-set-server = utf8
 
 datadir=/var/lib/mysql/
 
-wsrep_cluster_address=gcomm://{% if (groups['mariadb'] | length) > 1 %}{% for host in groups['mariadb'] %}{{ hostvars[host]['ansible_' + hostvars[host]['vip_interface']]['ipv4']['address'] }}:{{ mariadb_wsrep_port }}{% if not loop.last %},{% endif %}{% endfor %}{% endif %}
+wsrep_cluster_address=gcomm://{% if (groups['mariadb'] | length) > 1 %}{% for host in groups['mariadb'] %}{{ hostvars[host]['ansible_' + hostvars[host]['db_interface']]['ipv4']['address'] }}:{{ mariadb_wsrep_port }}{% if not loop.last %},{% endif %}{% endfor %}{% endif %}
 
-wsrep_provider_options=gmcast.listen_addr=tcp://{{ api_interface_address }}:{{ mariadb_wsrep_port }};ist.recv_addr={{ api_interface_address }}:{{ mariadb_ist_port }}
+wsrep_provider_options=gmcast.listen_addr=tcp://{{ rel_interface_address }}:{{ mariadb_wsrep_port }};ist.recv_addr={{ rel_interface_address }}:{{ mariadb_ist_port }}
 
-wsrep_node_address={{ api_interface_address }}:{{ mariadb_wsrep_port }}
-wsrep_sst_receive_address={{ api_interface_address }}:{{ mariadb_sst_port }}
+wsrep_node_address={{ rel_interface_address }}:{{ mariadb_wsrep_port }}
+wsrep_sst_receive_address={{ rel_interface_address }}:{{ mariadb_sst_port }}
 
-wsrep_provider=/usr/lib/galera/libgalera_smm.so
+wsrep_provider=/usr/lib64/galera/libgalera_smm.so
 wsrep_cluster_name="{{ mariadb_cluster_name }}"
 wsrep_node_name={{ ansible_hostname }}
 wsrep_sst_method=xtrabackup-v2
