--- a/roles/galera/templates/wsrep-notify.sh.j2
+++ b/roles/galera/templates/wsrep-notify.sh.j2
@@ -3,7 +3,7 @@
 # Edit parameters below to specify the address and login to server.
 USER={{ mariadb_user }}
 PSWD={{ mariadb_passwd }}
-HOST={{ api_interface_address }}
+HOST={{ rel_interface_address }}
 PORT={{ mariadb_port }}
 LB_USER=haproxy
 
