--- a/roles/galera/templates/galera.cnf.j2
+++ b/roles/galera/templates/galera.cnf.j2
@@ -9,12 +9,12 @@ bind-address={{ rel_interface_address }}
 port={{ mariadb_port }}
 
 # log-error=/var/log/mariadb.log
+expire_logs_days=7 
 
 log-bin=mysql-bin
 binlog_format=ROW
 default-storage-engine=innodb
 innodb_autoinc_lock_mode=2
-
 collation-server = utf8_general_ci
 init-connect = SET NAMES utf8
 character-set-server = utf8
